Fix tabs misalignment

--- a/src/components/Tabs/tabs.css
+++ b/src/components/Tabs/tabs.css
@@ -15,19 +15,19 @@
             display     : flex;
             align-items : center;
 
-            li {
-                list-style-type : none;
-            }
+            li { list-style-type : none; }
 
-            li:not(last-child) > p {
-                margin-right  : 24px;
-                color         : var(--tab-default-label);
-                font-weight   : 400;
+            p {
                 padding       : 16px 0;
                 border-bottom : 2px solid transparent;
+                position      : relative;
             }
 
-            p { position : relative; }
+            li:not(:last-child) > p {
+                margin-right : 24px;
+                color        : var(--tab-default-label);
+                font-weight  : 400;
+            }
 
             p:hover { color : var(--tab-hover-label); }
 
